--- a/app/views/categories/_form_categories.html.erb
+++ b/app/views/categories/_form_categories.html.erb
@@ -2,7 +2,7 @@
 
   <% if @category.errors.any? %>
     <div class="alert alert-danger">
-      <strong>Foram encontrados erros:</strong>
+      <strong><%= t('categories.form.errors_header') %></strong>
       <ul>
         <% @category.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
@@ -12,10 +12,10 @@
   <% end %>
 
   <div class="mb-3">
-    <%= f.label :name, "Nome da Categoria", class: "form-label" %>
-    <%= f.text_field :name, class: "form-control", placeholder: "Informe o nome da categoria" %>
+    <%= f.label :name, class: "form-label" %>
+    <%= f.text_field :name, class: "form-control", placeholder: t('categories.form.name_placeholder') %>
   </div>
 
-  <%= f.submit "Salvar", class: "btn btn-success" %>
+  <%= f.submit t('categories.form.save'), class: "btn btn-success" %>
 
 <% end %>
