--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,11 +1,11 @@
 <div class="container mt-4">
   <div class="card shadow-sm">
     <div class="card-body">
-      <h3 class="card-title mb-4">Nova Categoria</h3>
+      <h3 class="card-title mb-4"><%= t('categories.form.new_category') %></h3>
 
       <%= render "form_categories" %>
 
-      <%= link_to "Voltar", categories_path, class: "btn btn-secondary mt-3" %>
+      <%= link_to t('categories.form.back'), categories_path, class: "btn btn-secondary mt-3" %>
     </div>
   </div>
 </div>
