--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,23 +1,22 @@
 <div class="card p-3 mb-3">
-  <h5>Adicionar Comentário</h5>
+  <h5><%= t('comments.form.add_comment') %></h5>
 
   <%= form_with(model: [movie, comment], local: true) do |f| %>
     
     <% if !user_signed_in? %>
       <div class="mb-3">
-        <%= f.label :author_name, "Seu nome" %>
-        <%= f.text_field :author_name, class: "form-control", placeholder: "Digite seu nome" %>
+        <%= f.label :author_name %>
+        <%= f.text_field :author_name, class: "form-control", placeholder: t('comments.form.author_name_placeholder') %>
       </div>
     <% else %>
-      <%# Se estiver logado, atribuímos o nome automaticamente ao usuário %>
       <%= f.hidden_field :author_name, value: current_user.name %>
     <% end %>
 
     <div class="mb-3">
-      <%= f.label :content, "Comentário" %>
-      <%= f.text_area :content, rows: 3, class: "form-control", placeholder: "Escreva seu comentário" %>
+      <%= f.label :content %>
+      <%= f.text_area :content, rows: 3, class: "form-control", placeholder: t('comments.form.content_placeholder') %>
     </div>
 
-    <%= f.submit "Enviar", class: "btn btn-success" %>
+    <%= f.submit t('comments.form.submit'), class: "btn btn-success" %>
   <% end %>
 </div>
