--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,11 +1,9 @@
 <% content_for :title, "New movie" %>
 
-<h1>Cadastrar Novo Filme</h1>
-
 <%= render "form", movie: @movie %>
 
 <br>
 
 <div>
-  <%= link_to "Voltar para Home", movies_path %>
+  <%= link_to t('movies.new.back_to_home'), movies_path %>
 </div>
